--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "sqlite": "^5.1.1",
-    "sqlite-async": "^1.0.0"
+    "sqlite-async": "^1.0.0",
+    "zod": "^3.23.8"
   },
   "prisma": {
     "schema": "./prisma/schema.prisma",
