--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "sqlite": "^5.1.1",
     "sqlite-async": "^1.0.0",
     "zod": "^3.23.8"
