--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "test": "node --test **/*.test.js"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
@@ -17,6 +18,7 @@
     "nodemailer": "^6.10.0",
     "sqlite": "^5.1.1",
     "sqlite-async": "^1.0.0",
+    "supertest": "^7.0.0",
     "zod": "^3.23.8"
   },
   "prisma": {
